# DancingMadFF6

./: .gitattributes  .gitignore  LICENSE  README.md  note.for.credits  resume.txt
.github/: copilot-instructions.md
.github/workflows/: codeberg-issue-mirror.yml  codeberg-repo-mirror.yml  codeql.yml  installer-appimage.yml  installer-macos.yml  installer-release-all.yml  installer-windows.yml
contrib/: ff3_fade_orgNMI-handler.asm  ff3_fade_orgNMI-handler.ips
contrib/old/: fading.asm  ff3_fade.ips
doc/: Dancing Mad.txt  codeberg-github-sync.md  dancing mad-sidselections.txt  ff3msu-code-walkthrough.md  installer-ci-workflows.md  technical-notes.txt  title-overlay-implementation.txt  tracingandsubroutines.html
installer/: CMakeLists.txt  DancingMad-linux.tar.xz  InstallWizard.py  InstallWizard.ui  Installer.py  bsnes-final.html  build.ninja.win32-static  config.txt  customtrackselection.cpp  customtrackselection.h  customtrackselection.ui  depends.bat  destinationpage.py  dminst-dancemonkey.ui  dminst.cpp  dminst.h  dminst.rc  dminst.ui  dmlogger.cpp  dmlogger.h  downloader.py  downloadmanager.cpp  downloadmanager.h  downloadpage.py  ff3msu.ips  finalpage.py  higan-final.html  installtypepage.py  license.html  licensepage.py  main.cpp  manifest.bml  mirrorchecker.cpp  mirrorchecker.h  package32and64.bat  packageinstaller.bat  readme.html  rom_validator.cpp  rom_validator.h  sd2snes-final.html  (+9 more)
installer/appimage/: AppImageBuilder.yml  README.md
installer/appimage/AppDir/usr/share/applications/: DancingMad.desktop
installer/installermodule/: InstallWizard.py  customselectionpage.py  destinationpage.py  downloader.py  downloadpage.py  finalpage.py  installtypepage.py  licensepage.py - Shortcut.lnk  multidownloadtest.py  rom.py  rompytest.py  selections.py  selectiontablewidget.py  song.py
installer/ips-patcher-master/: IPSPatcherHandler.cpp  IPSPatcherHandler.h  README.md
installer/old_installer/: InstallWizard.ui  Installer.py  bsnes-final.html  config.txt  higan-final.html  license.html  package32and64.bat  sd2snes-final.html  setup.py  validate-songlist.py
installer/old_installer/installermodule/: __init__.py  finalpage.py  installtypepage.py  operapage.py  readmepage.py  selections.py
patch/: Makefile  assemble.bat  ff3msu.asm  ff3msu.ips  ff3msu.link  ff3msu.xml
patch/test/: 2input.asm  Header.inc  MSU.inc  MSUPlay.inc  SNES_Registers.inc  Snes_Init.asm  msulogo.clr  msulogo.map  msulogo.pcx  msulogo.pic  msuplay.asm  palette.inc  tiles.inc
updater/: MainWindow.cs  MainWindow.glade  Program.cs
utils/: CHANGES.txt  README.txt  dancing-mad-normalize.py  msu_normalize.py  music-higanify.bat  music-mkdistribute.bat  sox-deamp.py  sync_codeberg_issues.py  sync_codeberg_repo.py
utils/flips/: CHANGES.txt  LICENSE.txt  README.txt  music-mkdistribute.bat
utils/flips/flips-src/: Makefile  flips-cli.c  flips-gtk.c  flips-w32.c  flips.c  flips.h  libbps.c  libbps.h  libips.c  libips.h  libups.c  libups.h  structmem.h
utils/wla-dx-9.5-win32-bin-2013-SVN-rev8-WJ/: ff3msu.asm  ff3msu.link  wla-win32.diff
utils/wla-dx-9.5-win32-bin-2013-SVN-rev8-WJ/examples/parallax/: gb_memory.i  makefile  nintendo_logo.i  test.s
utils/wla-dx-9.5-win32-bin-2013-SVN-rev8-WJ/examples/parallax/data/: font_numbers.bn  font_rest.bn  font_uppercase.bn  intro_ground_1.bn  intro_ground_2.bn  intro_ground_3.bn
utils/wla-dx-9.5-win32-bin-2013-SVN-rev8-WJ/examples/tbp/: defines.i  level_01.s  linkfile  main.s  makefile  setup.s  speed.lib  vbi.s
utils/wla-dx-9.5-win32-bin-2013-SVN-rev8-WJ/examples/tbp/include/: gb_banks.i  gb_memory.i
video/: Makefile  conversion.py  extraction.py  video-player-test.asm
